tests/soundness/token_shadowing_exploit.stderr
error[E0599]: no associated item named `__ARCHMAGE_TIER_TAG` found for struct `X64V3Token` in the current scope
  --> tests/soundness/token_shadowing_exploit.rs:18:1
   |
16 | struct X64V3Token;
   | ----------------- associated item `__ARCHMAGE_TIER_TAG` not found for this struct
17 |
18 | #[arcane]
   | ^^^^^^^^^ associated item not found in `X64V3Token`
   |
   = note: this error originates in the attribute macro `arcane` (in Nightly builds, run with -Z macro-backtrace for more info)
